# YOLOv8-TensorRT-CPP

./: CMakeLists.txt  package.xml
config/: example_data.yaml  preprocessing.yaml
include/yolo_tensorrt_cpp/: cmd_line_util.h  yolo_node.hpp  yolov8.h
launch/: yolo.launch.py
src/: benchmark.cpp  object_detection_image.cpp  object_detection_video_stream.cpp  serialize_engine.cpp  yolo_node.cpp  yolov8.cpp
yolo_tensorrt_cpp/: detection_visualizer_node.py  image_loader_node.py
